# celery-channel-poc

./: .env  .gitignore  manage.py  package-lock.json  package.json  pyproject.toml  tsconfig.json  webpack.config.js
docker/: Dockerfile  docker-compose.yml
falconeye/: bg_tasks.py  response.py  utils.py
falconeye/characters/: admin.py  apps.py  consumers.py  models.py  routing.py  serializers.py  tasks.py  urls.py  validators.py  views.py
falconeye/characters/migrations/: 0001_initial.py  0002_rename_home_world_people_homeworld.py
falconeye/config/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
falconeye/users/: apps.py  urls.py  views.py
static/ts/: constants.ts  index.tsx  interfaces.ts  validators.ts
static/ts/components/: BaseForm.tsx  CharacterForm.tsx  PeopleForm.tsx  PlanetForm.tsx  StatusBadge.tsx
static/ts/pages/: CreatePeoplePage.tsx
templates/: base.html
templates/characters/: people_form.html  people_list.html
templates/partials/: header.html
templates/users/: login.html
